--- a/index.html
+++ b/index.html
@@ -1,3 +1,28 @@
-SUMAN's Site
-
-<img src="https://placeimg.com/640/480/any"></img>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Suman Pattnaik,IT Professional and Innovator</title>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="https://justsaysumaan.wordpress.com/">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Hi there, I'm Suman Pattnaik</h1>
+				<p>I'm best know for bein a close to complete IT package <em>A full length Java Coder</em>, A Big Data starter, A teacher, trainer, Designer and Innovator <a href="/about">Read more about my life...</a></p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:sumanforuin@yahoo.com">email</a></li>
+        		<li><a href="https://github.com/sumanpattnaik007">github.com/sumanpattnaik007</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
