--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
         		<h1>Hi there, I'm Suman Pattnaik</h1>
 				<p>I'm best know for bein a close to complete IT package <em>A full length Java Coder</em>, A Big Data starter, A teacher, trainer, Designer and Innovator <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
-		</div><!-- /.container -->
+		</div>
+		<div class="container">
+                <div>
+			<img src="https://placeimg.com/640/480/any"></img>
+		</div>
 		<footer>
     		<ul>
         		<li><a href="mailto:sumanforuin@yahoo.com">email</a></li>
