--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <div>
 			<img src="https://placeimg.com/640/480/any"></img>
 		</div>
+		</div>
 		<footer>
     		<ul>
         		<li><a href="mailto:sumanforuin@yahoo.com">email</a></li>
