--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Suman Pattnaik</h1>
-				<p>I'm best know for bein a close to complete IT package <em>A full length Java Coder</em>, A Big Data starter, A teacher, trainer, Designer and Innovator <a href="/about">Read more about my life...</a></p>
+				<p>I'm best known for being a close to complete IT package - <em>A full length Java Coder, A Big Data starter, A teacher, trainer, Designer and Innovator </em> <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div>
 		<div class="container">
                 <div>
-			<img src="https://placeimg.com/640/480/any"></img>
+			<img src="https://placeimg.com/840/480/any"></img>
 		</div>
 		</div>
 		<footer>
