--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     		<ul>
         		<li><a href="mailto:sumanforuin@yahoo.com">email</a></li>
         		<li><a href="https://github.com/sumanpattnaik007">github.com/sumanpattnaik007</a></li>
+			<li><a href="https://www.linkedin.com/in/suman-pattnaik-b9559b6">linkedIn</a></li>
 			</ul>
 		</footer>
 	</body>
