--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
-        		<li><a href="/Suman_Resume.pdf">CV</a></li>
+        		<li><a href="Suman_Resume.pdf">CV</a></li>
         		<li><a href="https://justsaysumaan.wordpress.com/">Blog</a></li>
     		</ul>
 		</nav>
